--- a/index.html
+++ b/index.html
@@ -6,8 +6,22 @@
     <title>Landing Page</title>
 
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <div class="navbar-container">
+        <nav class="navbar">
+            <h3 class="logo">Header Logo</h3>
+            <ul class="links">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </nav>
+    </div>
     
 </body>
 </html>
