--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,13 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
 
-    <div class="navbar-container">
+    <div class="container">
         <nav class="navbar">
             <h3 class="logo">Header Logo</h3>
             <ul class="links">
@@ -22,6 +25,44 @@
             </ul>
         </nav>
     </div>
+
+    <div class="hero-container">
+        <div class="hero">
+            <h2 class="hero-title">This website is awesome</h2>
+            <p class="hero-text">
+                This website has some subtext that goes
+                here under the main title.
+                It's smaller font and is lower contrast.
+            </p>
+            <button>Sign up</button>
+        </div>
+        <img src="requirements/requirements.png" alt="photo" width="400" height="200">
+    </div>
+
+    <div class="section">
+        <h3 class="section-title">Some random information</h3>
+        <section class="illustrations">
+            <div class="card">
+                <div class="image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            
+        </section>
+    </div>
     
+
 </body>
+
 </html>
