--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <div class="section">
         <h3 class="section-title">Some random information</h3>
-        <section class="illustrations">
+        <section class="section-illustrations">
             <div class="card">
                 <div class="image"></div>
                 <p>this is some subtext under an illustration or image</p>
@@ -58,10 +58,43 @@
                 <div class="image"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
-            
+
         </section>
     </div>
-    
+
+    <div class="section2">
+        <section class="section-quote">
+            <p class="quote-text">
+                This is an inspiring quote, or a testimonial from a
+                customer. Maybe it's just fillling up space, or maybe
+                people will actually read it. Who knows? All I know
+                is that it looks nice.
+            </p>
+            <p class="quote-author">
+                -Thor, God of Thunder
+            </p>
+        </section>
+    </div>
+
+    <div class="section3">
+        <div class="pop-up">
+            <div class="left-side">
+                <h4 class="title">Call to action! It's time!</h4>
+                <p class="message">
+                    Sign up for our product by clicking that
+                    button right over there!
+                </p>
+            </div>
+            <div class="right-side">
+                <button>Sign up</button>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <p>Copyright &#169; The Odin Project 2025</p>
+    </footer>
+
 
 </body>
 
